gcc/testsuite/gdc.test/fail_compilation/imports/deprecatedImporta.d
deprecated("Please import deprecatedImportb directly!")
public import imports.deprecatedImportb : AliasSeq, foo, bar, E, S, C, I;
